@startuml Dentex_Pure_Domain_Model

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #A9A9A9
skinparam classHeaderBackgroundColor #E9ECEF
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 70
skinparam shadowing false

skinparam class {
    FontSize 12
    AttributeFontSize 11
}

hide circle
hide empty members

' ============================================================
' ENTITIES
' ============================================================

class User {
    + id: bigint
    + first_name: string
    + last_name: string
    + email: string
    + email_verified_at: timestamp
    + password: string
    + created_at / updated_at: timestamp
    --
    + register(data): User
    + login(credentials): array
    + logout(): void
    + updateProfile(data): User
    + verifyOtp(code): bool
}

class UserDeviceToken {
    + id: bigint
    + user_id: bigint
    + device_type: string
    + fcm_token: string
    + created_at / updated_at: timestamp
}

class StudentProfile {
    + id: bigint
    + user_id: bigint
    + group_id: bigint
    + phone: string
    + exam_number: string
    + university: string
    + academic_year: int
    + semester: int
    + created_at / updated_at: timestamp
    --
    + autoEnrollCourses(): array
    + manualEnrollCourses(courseIds): array
    + dropCourses(courseIds): array
}

class InstructorProfile {
    + id: bigint
    + user_id: bigint
    + phone: string
    + specialty: string
    + specialty_year: string
    + created_at / updated_at: timestamp
}

class DepartmentHeadProfile {
    + id: bigint
    + user_id: bigint
    + department_id: bigint
    + created_at / updated_at: timestamp
    --
    + delegateViewTreatments(instructorId): bool
    + revokeViewTreatments(instructorId): bool
}

class StoreProfile {
    + id: bigint
    + user_id: bigint
    + store_name: string
    + store_phone: string
    + store_address: text
    + created_at / updated_at: timestamp
}

class Group {
    + id: bigint
    + group_name: string
    + academic_year: tinyint
    + created_at / updated_at: timestamp
}

class Department {
    + id: bigint
    + name: string
    + total_chairs: int
    + description: text
    + created_at / updated_at: timestamp
    --
    + getDepartmentStatistics(courseId): array
}

class Course {
    + id: bigint
    + department_id: bigint
    + name: string
    + year: int
    + semester: int
    + created_at / updated_at: timestamp
}

class CaseType {
    + id: bigint
    + course_id: bigint
    + name: string
    + slots_needed: int
    + required_count: int
    + created_at / updated_at: timestamp
    --
    + createCaseType(data): CaseType
    + updateCaseRequirement(newCount): bool
}

class StudentCourseEnrollment <<association>> {
    + id: bigint
    + student_id: bigint
    + course_id: bigint
    + status: enum
    + attempts_count: int
    + created_at / updated_at: timestamp
}

class Patient {
    + id: bigint
    + patient_code: string
    + full_name: string
    + birth_date: date
    + gender: enum
    + phone: string
    + address: string
    + preliminary_diagnosis: text
    + availability_status: enum
    + added_by: bigint
    + created_at / updated_at: timestamp
    --
    + registerPatient(data, files): Patient
    + updatePatient(data, images): Patient
    + updateAvailabilityStatus(): void
}

class PatientMedicalHistory {
    + id: bigint
    + patient_id: bigint
    + has_general_diseases: boolean
    + general_diseases_details: text
    + is_special_needs: boolean
    + special_needs_details: text
    + takes_medications: boolean
    + medications_details: text
    + has_allergies: boolean
    + allergies_details: text
    + is_pregnant: boolean
    + created_at / updated_at: timestamp
}

class PatientDiagnose {
    + id: bigint
    + patient_id: bigint
    + instructor_id: bigint
    + case_type_id: bigint
    + department_id: bigint
    + suggested_by_student_id: bigint
    + final_diagnosis: text
    + status: enum
    + estimated_cost: decimal
    + rejection_reason: text
    + created_at / updated_at: timestamp
    --
    + approveCase(data): void
    + rejectCase(data): void
    + referToDepartment(departmentId): void
}

class Treatment {
    + id: bigint
    + diagnosis_id: bigint
    + instructor_id: bigint
    + status: enum
    + rejection_reason: text
    + start_date: timestamp
    + end_date: timestamp
    + instructor_notes: text
    + created_at / updated_at: timestamp
    --
    + startTreatment(data): Treatment
    + completeTreatment(data): void
    + reviewTreatment(data): Treatment
    + rollbackTreatment(): void
    + bookFollowUpAppointment(data): Appointment
}

class Appointment {
    + id: bigint
    + patient_id: bigint
    + student_id: bigint
    + diagnosis_id: bigint
    + treatment_id: bigint
    + slot_number: tinyint
    + appointment_date: date
    + status: enum
    + created_at / updated_at: timestamp
    --
    + reserveCase(data): Appointment
    + cancelAppointment(): void
    + getSlotTimeRange(): string
}

class Category {
    + id: bigint
    + name: string
    + description: text
    + created_at / updated_at: timestamp
}

class Product {
    + id: bigint
    + store_id: bigint
    + category_id: bigint
    + name: string
    + description: text
    + price: decimal
    + brand: string
    + availability_status: enum
    + condition: enum
    + quantity: int
    + created_at / updated_at: timestamp
    --
    + createProduct(data, images): Product
    + updateProduct(data, images): Product
    + deleteProduct(): bool
}

class Promotion {
    + id: bigint
    + store_id: bigint
    + title: string
    + description: text
    + discount_percentage: decimal
    + start_date: timestamp
    + end_date: timestamp
    + is_active: boolean
    + created_at / updated_at: timestamp
    --
    + createPromotion(data, productIds): Promotion
    + updatePromotion(data, productIds): Promotion
    + deletePromotion(): bool
}

class Cart {
    + id: bigint
    + student_id: bigint
    + created_at / updated_at: timestamp
    --
    + addProduct(productId, quantity): void
    + removeProduct(cartItemId): void
    + updateItemQuantity(cartItemId, quantity): void
    + clearCart(): void
}

class CartItem {
    + id: bigint
    + cart_id: bigint
    + product_id: bigint
    + quantity: int
    + created_at / updated_at: timestamp
}

class Order {
    + id: bigint
    + student_id: bigint
    + store_id: bigint
    + total_amount: decimal
    + status: enum
    + rejection_reason: text
    + created_at / updated_at: timestamp
    --
    + checkout(studentId): Order
    + updateOrderStatus(data): Order
}

class OrderItem {
    + id: bigint
    + order_id: bigint
    + product_id: bigint
    + quantity: int
    + unit_price: decimal
    + subtotal: decimal
    + created_at / updated_at: timestamp
}

' ============================================================
' RELATIONSHIPS
' ============================================================

' -- Identity & Access
User "1" *-- "0..1" StudentProfile
User "1" *-- "0..1" InstructorProfile
User "1" *-- "0..1" DepartmentHeadProfile
User "1" *-- "0..1" StoreProfile
User "1" *-- "0..*" UserDeviceToken
StudentProfile "0..*" -- "1" Group
InstructorProfile "0..*" -- "0..*" Group : group_instructor

' -- Academic Structure
DepartmentHeadProfile "0..1" -- "1" Department
Department "1" *-- "0..*" Course
Course "1" *-- "0..*" CaseType
StudentProfile "1" -- "0..*" StudentCourseEnrollment
Course "1" -- "0..*" StudentCourseEnrollment
(StudentProfile, Course) .. StudentCourseEnrollment

' -- Clinical Management
User "1" -- "0..*" Patient : added_by
Patient "1" *-- "0..1" PatientMedicalHistory
Patient "1" *-- "0..*" PatientDiagnose
CaseType "1" -- "0..*" PatientDiagnose
Department "1" -- "0..*" PatientDiagnose
User "1" -- "0..*" PatientDiagnose : instructor
User "1" -- "0..*" PatientDiagnose : suggested_by_student
PatientDiagnose "1" *-- "0..1" Treatment
PatientDiagnose "1" *-- "0..*" Appointment
Treatment "0..1" -- "0..*" Appointment
User "1" -- "0..*" Treatment : instructor
Patient "1" -- "0..*" Appointment
User "1" -- "0..*" Appointment : student

' -- E-Commerce & Store
Category "1" -- "0..*" Product
User "1" -- "0..*" Product : store
User "1" -- "0..*" Promotion : store
Product "0..*" -- "0..*" Promotion : promotion_product
User "1" *-- "0..1" Cart
Cart "1" *-- "0..*" CartItem
Product "1" -- "0..*" CartItem
User "1" -- "0..*" Order : student
User "1" -- "0..*" Order : store
Order "1" *-- "0..*" OrderItem
Product "1" -- "0..*" OrderItem

@enduml
